# NoteSquared_O

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md
.github/workflows/: ci.yml
Documents/ideation/: Gemini_Master_Docs.txt  Grok_Master_Docs.txt  OAI_Master_Docs.txt  prompt(4DocsRatings).txt  prompt.txt  promptMasters_examples.txt  promptRatingMasters.md
apps/mobile/: app.json  package-lock.json  package.json  tsconfig.json
apps/mobile/src/: App.tsx
apps/mobile/src/lib/: api.ts  supabase.ts
apps/mobile/src/screens/: RecordScreen.tsx  ReviewScreen.tsx
apps/web/: app.json  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.tsx
apps/web/src/screens/: RecordScreen.tsx  ReviewScreen.tsx
docs/: AI_CONTRACT.md  API.md  ARCHITECTURE.md  DB_SCHEMA.sql  DEPLOYMENT.md  INDEX.md  PAYMENTS.md  PRD.md  RUNBOOK.md  SECURITY_PRIVACY.md
services/api/: pyproject.toml
services/api/app/: auth.py  db.py  errors.py  main.py  models.py  settings.py
services/api/app/routes/: health.py  lessons.py  outputs.py  students.py
services/api/app/services/: ai_pipeline.py  emailer.py  openai_client.py
services/api/note2_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/tests/: conftest.py  fakes.py  test_ai_pipeline.py  test_auth.py  test_db.py  test_emailer.py  test_health.py  test_lessons.py  test_openai_client.py  test_outputs.py  test_pipeline_contract.py  test_students.py
supabase/migrations/: 001_init.sql
